--- a/table template.html
+++ b/table template.html
@@ -7,7 +7,7 @@
 		<img src="12.jpg" height="70" align="left"></td>
 		<td>
 		<p align="right" bgcolor="orange">
-			<strong>Akhil</strong><br>student<br>engineering
+			<strong>Rahul</strong><br>student<br>engineering
 		</p></td>
 		<td> </td><td></td><td></td><td> </td>
 		
@@ -59,7 +59,7 @@
 			<td>
 				<strong>Personal Details</strong>
 				<p bgcolor="blue"><ul>
- 					<li>Akhil</li>
+ 					<li>Rahul</li>
 					<li>DOB</li>
 					<li>place</li>
 				</ul></p>
@@ -69,7 +69,7 @@
 			<td>
 				<strong>Personal Details</strong>
 				<p><ul>
- 					<li>Akhil</li>
+ 					<li>Rahul</li>
 					<li>DOB</li>
 					<li>place</li>
 				</ul></p>
